# ai-play-mates

./: .env.local.example  .gitignore  .gitleaks.toml  ARCHITECTURE.md  drizzle.config.ts  package.json  pnpm-lock.yaml  skills-lock.json
.githooks/: pre-commit
agent/: .env.local.example  .gitignore  agent.py  pyproject.toml
drizzle/: 0001_brown_menace.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
public/characters/: index.json
public/characters/avatar/: manifest.json
public/characters/bunny/: manifest.json
public/characters/chester/: Chester.vrm
public/characters/creature/: manifest.json  model.glb
public/characters/samba/: manifest.json
scripts/: test-build-manifest.ts  validate-retarget.ts
src/: proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/games/: page.tsx
src/app/landing/: page.tsx
src/app/login/: page.tsx
src/app/play/: page.tsx
src/app/sign-in/: page.tsx
src/app/signup/: page.tsx
src/app/upload/: page.tsx
src/components/: BunnyFigure.tsx  CharacterInit.tsx  CharacterUploader.tsx  ControlPanel.tsx  CreatureFigure.tsx  DevControlPanel.tsx  Figure.tsx  LiveKitSession.tsx  Logo.tsx  Scene.tsx  SignOutButton.tsx  SubscriptionButton.tsx  VrmFbxFigure.tsx  VrmFigure.tsx  login-form.tsx  signup-form.tsx
src/components/games/: JungleBlastGame.tsx  PhaserGame.tsx
src/db/: auth-schema.ts
src/lib/: actions.ts  auth.ts  characters.ts  fbx-browser.ts  figure-registry.ts  glb-browser.ts  glb-inspect.ts  subscription.ts  useActionState.ts
src/lib/games/: usePosePunch.ts
(+14 files in other folders)
