[project]
name = "spac-agent"
version = "0.1.0"
description = "S-PAC vision agent — Gemini Live Vision that drives the three.js bunny over LiveKit RPC."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "livekit-agents[google,images]>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
